fix: jasa gap

--- a/src/components/homepage/jasa/jasa.module.css
+++ b/src/components/homepage/jasa/jasa.module.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    gap: 60px;
+    gap: 20px;
     padding: 0 12px;
 }
 
